About Icons - Z-index Fix
New values prevent visual anomaly when nav menu is opening.

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -603,7 +603,7 @@ p.cta {
     position: absolute;
     // top: 0;
     // z-index: -1;
-    z-index: 98;
+    z-index: 48;
     left: -3px;
     top: 15px;
     &.end {
@@ -636,7 +636,7 @@ p.cta {
         display: flex;
         align-items: center;
         justify-content: center;
-        z-index: 99;
+        z-index: 49;
         &.ota {
           background-color: var(--color-ota);
           img {
